# compsci

./: README.md
.github/: dependabot.yaml
algorithms/max-subarray/max-subarray/: Makefile
algorithms/max-subarray/max-subarray/src/: main.rs  max_subarray.rs
algorithms/max-subarray/python/: Makefile  README.md  pyproject.toml
algorithms/max-subarray/python/max_subarray/: kadane.py
algorithms/max-subarray/python/tests/: kadane_test.py
algorithms/max-subarray/rust/: Cargo.toml  Makefile
algorithms/max-subarray/rust/src/: main.rs  max_subarray.rs
